# snake_cpp

./: CMakeLists.txt  MenuSFMLControl.cpp  MenuSFMLControl.h  MenuSFMLView.cpp  MenuSFMLView.h  ScoreboardSFMLController.cpp  ScoreboardSFMLController.h  ScoreboardSFMLView.cpp  ScoreboardSFMLView.h  Snake.cpp  Snake.h  SnakeSFMLController.cpp  SnakeSFMLController.h  SnakeSFMLView.cpp  SnakeSFMLView.h  main.cpp
scoreboard/: score.txt
